// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorModal should render renders EditorModal diff 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby="editor-modal-h4"
  className="diff monokai editor-modal"
  hasNoBodyWrapper={false}
  header={
    <div
      className="diff monokai"
    >
      <Title
        headingLevel="h4"
        id="editor-modal-h4"
        ouiaId="editor-modal-title"
      >
        
      </Title>
      <DiffToggle
        changeState={[Function]}
        stateView="split"
      />
    </div>
  }
  id="editor-modal"
  isOpen={false}
  onClose={[Function]}
  ouiaId="editor-modal-component"
  ouiaSafe={true}
  position="top"
  showClose={true}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant="primary"
>
  <div
    id="diff-table"
  >
    <DiffView
      newText="</>"
      oldText="<? />"
      patch=""
      viewType="split"
    />
  </div>
</Modal>
`;

exports[`EditorModal should render renders EditorModal editor 1`] = `
<Modal
  actions={Array []}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby="editor-modal-h4"
  className="input monokai editor-modal"
  hasNoBodyWrapper={false}
  header={
    <div
      className="input monokai"
    >
      <Title
        headingLevel="h4"
        id="editor-modal-h4"
        ouiaId="editor-modal-title"
      >
        
      </Title>
    </div>
  }
  id="editor-modal"
  isOpen={false}
  onClose={[Function]}
  ouiaId="editor-modal-component"
  ouiaSafe={true}
  position="top"
  showClose={true}
  title=""
  titleIconVariant={null}
  titleLabel=""
  variant="primary"
>
  <EditorView
    autocompletion={true}
    className="editor ace_editor_modal"
    isMasked={false}
    isSelected={true}
    keyBinding="Default"
    liveAutocompletion={false}
    mode="Ruby"
    name="editor"
    onChange={[Function]}
    readOnly={false}
    theme="Monokai"
    value="</>"
  />
</Modal>
`;
